# votron

./: .env.development.local.example  README.md  docker-compose.yaml  package-lock.json  package.json  test_proposals.json
contract/: .gitignore  Cargo.toml  committee.wasm
contract/src/: collateral.rs  lib.rs  traits.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js
frontend/src/components/: Connect.jsx  Home.jsx  Navbar.jsx  ProposalCard.jsx  Proposals.jsx  Settings.jsx  SignIn.jsx  SignOut.jsx  Status.jsx
frontend/src/hooks/: constants.js  fastnear.js  useProposals.js  useWebSocket.js
frontend/styles/: globals.css
src/: agentQueue.ts  index.ts  proposalScreener.ts
src/routes/: agentAccount.ts  debug.ts  proposalScreener.ts  screener.ts
