[package]
name = "committee"
description = "autonomous proposal screening"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.7.0", features = ["schemars"] }
schemars = { version = "0.8" }
serde_json = "1.0.135"
serde = "1.0.217"
dcap-qvl = { git = "https://github.com/mattlockyer/dcap-qvl" }
sha2 = "0.10.8"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = "0.22.1"

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true